# hfu_prog

hfu_prog/: CMakeLists.txt  README.md
hfu_prog/Aufgabe_10/: ex10.1_Personendatenbank.cpp  ex10.2_Bubblesort.cpp  ex10.6_main.cpp  safeArray.cpp  safeArray.h
hfu_prog/Aufgabe_11/: ex11_main.cpp  ex11_safeArray.cpp  ex11_safeArray.h
hfu_prog/Aufgabe_7/: ex7.1.2.c  ex7.1.c  ex7.2.1.c  ex7.2.2.c  ex7.2.3.c  ex7.3.2.c  ex7.3.c  ex7.4.1.c  ex7.4.2.c  ex7.5.c  ex7.6.c  rechner  rechner2
hfu_prog/Aufgabe_8/: ex8.1.2.c  ex8.1.c  ex8.2.c  ex8.3.c  ex8.4.cpp  ex8.5.c  ex8.6.cpp
hfu_prog/Aufgabe_9/: ex9.1.cpp  ex9.2.c  ex9.2.cpp
hfu_prog/Aufgabe_9/ex9.2/: main.cpp  stack.cpp  stack.h
hfu_prog/Aufgabe_9/ex9.4/: ex9.4_main.cpp  stack2.cpp  stack2.h
hfu_prog/Aufgabe_9_v2/: 9.1_vektoren.cpp  klammerung.cpp  main_stack.cpp  modularisierungsfehler.md  stack.cpp  stack.h
